# Developer-OS

./: .gitignore  README.md  README_EN.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260705_0001_initial_dashboard_schema.py  20260705_0002_add_users.py  20260705_0003_add_dashboard_user_ownership.py  20260705_0004_add_ai_planning_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: ai_planner.py  ai_providers.py  auth.py  goals.py  health.py  learning.py  notes.py  todos.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/domain/ai/: entities.py  providers.py  repositories.py  services.py
backend/app/domain/auth/: entities.py  repositories.py  services.py
backend/app/domain/dashboard/: entities.py  repositories.py  services.py
backend/app/infrastructure/ai/: openai_compatible.py
backend/app/infrastructure/database/: migration_runner.py  models.py  session.py  unit_of_work.py
backend/app/infrastructure/repositories/: sqlalchemy_ai_repository.py  sqlalchemy_auth_repository.py  sqlalchemy_dashboard_repository.py
backend/app/schemas/: ai.py  auth.py  common.py  goals.py  learning.py  notes.py  todos.py
backend/tests/: conftest.py  test_ai_api.py  test_auth_api.py  test_dashboard_auth_api.py  test_goals_api.py  test_health.py  test_learning_api.py  test_migrations.py  test_notes_api.py  test_openai_compatible_provider.py  test_todos_api.py
frontend/: .env.example  .gitignore  (+2 more)
(+77 files in other folders)
