[project]
name = "developer-os-backend"
version = "0.3.0"
description = "FastAPI backend for the Developer OS dashboard."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "PyJWT>=2.9.0",
  "uvicorn[standard]>=0.30.0",
  "SQLAlchemy>=2.0.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["alembic*", "tests*"]
